--- a/logging-lib/lib/build.gradle
+++ b/logging-lib/lib/build.gradle
@@ -7,22 +7,35 @@
  */
 
 plugins {
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'org.springframework.boot' version '2.4.4'
-    id 'java'
+    id 'java-library'
+    id 'maven-publish'
 }
 
 group = 'br.com.filipeborges.poc.spring.log_tracing.log'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0-SNAPSHOT'
 
 repositories {
     // Use JCenter for resolving dependencies.
     jcenter()
 }
 
+// Lib local publishing
+publishing {
+    publications {
+        myLibrary(MavenPublication) {
+            artifactId 'custom-log-webflux'
+            from components.java
+        }
+    }
+}
+
 dependencies {
     // Use JUnit Jupiter API for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+
+    // Spring Boot BOM
+    implementation platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
 
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
