--- a/logging-lib/lib/build.gradle
+++ b/logging-lib/lib/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    compileOnly 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.mockito:mockito-core:3.9.0'
 
